--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -25,9 +25,12 @@ on:
         default: '5.15'
         
 env:
+  KERNELSU_DIR: KernelSU
+  WORKSPACE_DIR: kernel_workspace
+  PLATFORM_DIR: kernel_platform
+  BUILD_KERNEL: oplus/build/oplus_setup.sh
   GIT_USER_NAME: yuanqiongyoukong
   GIT_USER_EMAIL: 413722718@qq.com
-  KERNELSU_DIR: KernelSU
   KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git
   KERNELSU_URL: https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh
   SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git
@@ -49,32 +52,35 @@ jobs:
         remove-haskell: 'true'
         remove-codeql: 'true'
         
-    - name: 安装编译环境
+    - name: 配置 Git
       run: |
         git config --global user.name "${GIT_USER_NAME}"
         git config --global user.email "${GIT_USER_EMAIL}"
+        
+    - name: 安装编译环境
+      run: |
         sudo apt update && sudo apt upgrade -y && sudo apt install -y python3 git curl
         curl -o ~/repo https://storage.googleapis.com/git-repo-downloads/repo
         chmod a+x ~/repo
         sudo mv ~/repo /usr/local/bin/repo
-        mkdir kernel_workspace && cd kernel_workspace
-        git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
-        git clone ${{env.PATCHES_REPO}}
+
+
         
     - name: 拉取内核清单
       run: |
+        mkdir ${{env.WORKSPACE_DIR}} && cd ${{env.WORKSPACE_DIR}}
         repo init -u ${{env.KERNEL_MANIFEST_URL}} -b refs/heads/oneplus/${{github.event.inputs.CPU}} -m ${{github.event.inputs.FEIL}}.xml --depth=1
         repo sync
         rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
-        sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion kernel_platform/msm-kernel/scripts/setlocalversion
-        sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
-        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' kernel_platform/oplus/build/oplus_setup.sh                 # 禁用图像打包
-        # sed -i 's/local default_value=none/local default_value=thin/Ig' kernel_platform/oplus/build/oplus_setup.sh              # 设置默认值为thin
-        # sed -i 's/local default_value=enable/local default_value=disable/Ig' kernel_platform/oplus/build/oplus_setup.sh         # 设置默认值为禁用
+        sed -i 's/ -dirty//g' ${{env.PLATFORM_DIR}}/common/scripts/setlocalversion ${{env.PLATFORM_DIR}}/msm-kernel/scripts/setlocalversion
+        sed -i '203a\export LTO=thin' ${{env.PLATFORM_DIR}}/${{env.BUILD_KERNEL}}                                                # 启用ThinLTO优化
+        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' ${{env.PLATFORM_DIR}}/${{env.BUILD_KERNEL}}                 # 禁用图像打包
+        # sed -i 's/local default_value=none/local default_value=thin/Ig' ${{env.PLATFORM_DIR}}/${{env.BUILD_KERNEL}}              # 设置默认值为thin
+        # sed -i 's/local default_value=enable/local default_value=disable/Ig' ${{env.PLATFORM_DIR}}/${{env.BUILD_KERNEL}}         # 设置默认值为禁用
         
     - name: 设置 KernelSU
       run: |
-        cd kernel_workspace/kernel_platform/common
+        cd ${{env.WORKSPACE_DIR}}/${{env.PLATFORM_DIR}}/common
         curl -LSs ${{env.KERNELSU_URL}} | bash -s main
         cd ${KERNELSU_DIR}
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
@@ -83,7 +89,10 @@ jobs:
         
     - name: 添加 SUSFS
       run: |
-        cd kernel_platform
+        cd ${{env.WORKSPACE_DIR}}
+        git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
+        git clone ${{env.PATCHES_REPO}}
+        cd ${{env.PLATFORM_DIR}}
         cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./common/${KERNELSU_DIR}/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch ./common/
         cp -r ../susfs4ksu/kernel_patches/fs/* ./common/fs/
@@ -107,14 +116,14 @@ jobs:
         
     - name: 编译内核
       run: |
-        cd kernel_workspace
-        ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{github.event.inputs.CPUD}} gki
+        cd ${{env.WORKSPACE_DIR}}
+        ./${{env.PLATFORM_DIR}}/oplus/build/oplus_build_kernel.sh ${{github.event.inputs.CPUD}} gki
 
     - name: 制作 AnyKernel3
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf ./AnyKernel3/.git
-        cp kernel_workspace/out/dist/Image ./AnyKernel3/
+        cp ${{env.WORKSPACE_DIR}}/out/dist/Image ./AnyKernel3/
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
@@ -126,4 +135,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: kernel_workspace/out/dist/Image
+        path: ${{env.WORKSPACE_DIR}}/out/dist/Image
