--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -29,6 +29,8 @@ env:
   WORKSPACE_DIR: kernel_workspace
   PLATFORM_DIR: kernel_platform
   BUILD_KERNEL: oplus/build/oplus_setup.sh
+  UPLOAD_IMAGE: kernel_workspace/out/dist/Image
+  UPLOAD_ANYKERNEL3: ./AnyKernel3/*
   GIT_USER_NAME: yuanqiongyoukong
   GIT_USER_EMAIL: 413722718@qq.com
   KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git
@@ -64,8 +66,6 @@ jobs:
         chmod a+x ~/repo
         sudo mv ~/repo /usr/local/bin/repo
 
-
-        
     - name: 拉取内核清单
       run: |
         mkdir ${{env.WORKSPACE_DIR}} && cd ${{env.WORKSPACE_DIR}}
@@ -123,16 +123,16 @@ jobs:
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf ./AnyKernel3/.git
-        cp ${{env.WORKSPACE_DIR}}/out/dist/Image ./AnyKernel3/
+        cp ${{env.WORKSPACE_DIR}}/out/dist/Image ./AnyKernel3/Image
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
         name: AnyKernel3_${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: ./AnyKernel3/*
+        path: ${{UPLOAD_ANYKERNEL3}}
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
         name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: ${{env.WORKSPACE_DIR}}/out/dist/Image
+        path: ${{env.UPLOAD_IMAGE}}
