--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -36,8 +36,8 @@ env:
   PATCHES_REPO: https://github.com/TheWildJames/kernel_patches.git
   ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3
   BUILD_KERNEL: kernel_platform/oplus/build/oplus_build_kernel.sh
-  UPLOAD_IMAGE: kernel_workspace/out/dist/Image
   UPLOAD_ANYKERNEL3: AnyKernel3
+  UPLOAD_IMAGE: kernel_workspace/out/dist/Image
   
 jobs:
   build:
@@ -122,7 +122,7 @@ jobs:
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf ./AnyKernel3/.git
-        cp ${{env.UPLOAD_IMAGE}} ./AnyKernel3/Image
+        cp ${{env.UPLOAD_IMAGE}} ./AnyKernel3/
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
