--- a/.github/workflows/KernelSU-Next.yml
+++ b/.github/workflows/KernelSU-Next.yml
@@ -112,21 +112,7 @@ jobs:
         cd kernel_workspace
         ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{github.event.inputs.CPUD}} gki
         
-    - name: 上传 Image 1
-      uses: actions/upload-artifact@v4
-      with:
-        name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: kernel_workspace//kernel_platform/out/msm-kernel-kalama-gki/dist/Image
-        continue-on-error: true 
-        
-    - name: 上传 Image 2
-      uses: actions/upload-artifact@v4
-      with:
-        name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: kernel_workspace/device/qcom/kalama-kernel/Image
-        continue-on-error: true 
-        
-    - name: 上传 Image 3
+    - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
         name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
