--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -31,12 +31,12 @@ env:
   KERNELSU_URL: https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh
   SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git
   ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3
-  KERNELSU_DIR: KernelSU
-  WORKSPACE_DIR: kernel_workspace
-  PLATFORM_DIR: kernel_platform
-  BUILD_KERNEL: kernel_platform/oplus/build/oplus_build_kernel.sh
-  UPLOAD_ANYKERNEL3: AnyKernel3
-  UPLOAD_IMAGE: kernel_workspace/kernel_platform/out/msm-kernel-kalama-gki/dist/Image
+  KSU_DIR: KernelSU
+  WORK_DIR: kernel_workspace
+  PLAT_DIR: kernel_platform
+  BUILD_KERNL: kernel_platform/oplus/build/oplus_build_kernel.sh
+  UP_AK3: AnyKernel3
+  UP_IMG: kernel_workspace/kernel_platform/out/msm-kernel-kalama-gki/dist/Image
   
 jobs:
   build:
@@ -67,59 +67,60 @@ jobs:
 
     - name: 拉取内核清单
       run: |
-        mkdir ${{env.WORKSPACE_DIR}} && cd ${{env.WORKSPACE_DIR}}
+        mkdir ${{env.WORK_DIR}} && cd ${{env.WORK_DIR}}
         repo init -u ${{env.KERNEL_MANIFEST_URL}} -b refs/heads/oneplus/${{github.event.inputs.CPU}} -m ${{github.event.inputs.FEIL}}.xml --depth=1
         repo sync
         rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
-        sed -i '203a\export LTO=thin' ${{env.PLATFORM_DIR}}/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
-        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' ${{env.PLATFORM_DIR}}/oplus/build/oplus_setup.sh                 # 禁用图像打包
-        # sed -i 's/local default_value=none/local default_value=thin/Ig' ${{env.PLATFORM_DIR}}/oplus/build/oplus_setup.sh              # 设置默认值为thin
-        # sed -i 's/local default_value=enable/local default_value=disable/Ig' ${{env.PLATFORM_DIR}}/oplus/build/oplus_setup.sh         # 设置默认值为禁用
+        sed -i 's/ -dirty//g' ${{env.PLAT_DIR}}/common/scripts/setlocalversion ${{env.PLAT_DIR}}/msm-kernel/scripts/setlocalversion
+        sed -i '203a\export LTO=thin' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
+        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                 # 禁用图像打包
+        # sed -i 's/local default_value=none/local default_value=thin/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh              # 设置默认值为thin
+        # sed -i 's/local default_value=enable/local default_value=disable/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh         # 设置默认值为禁用
         
     - name: 设置 KernelSU
       run: |
-        cd ${{env.WORKSPACE_DIR}}/${{env.PLATFORM_DIR}}/common
+        cd ${{env.WORK_DIR}}/${{env.PLAT_DIR}}/common
         curl -LSs ${{env.KERNELSU_URL}} | bash -s main
-        cd ${KERNELSU_DIR}
+        cd ${KSU_DIR}
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
         sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
         
     - name: 添加 SUSFS
       run: |
-        cd ${{env.WORKSPACE_DIR}}
+        cd ${{env.WORK_DIR}}
         git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
-        cd ${{env.PLATFORM_DIR}}
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./common/${KERNELSU_DIR}/
+        cd ${{env.PLAT_DIR}}
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./common/${KSU_DIR}/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch ./common/
         cp -r ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp -r ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
         
         # 应用补丁
-        cd ./common/${KERNELSU_DIR}
+        cd ./common/${KSU_DIR}
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         cd ..
         patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
 
     - name: 编译内核
       run: |
-        cd ${{env.WORKSPACE_DIR}}
+        cd ${{env.WORK_DIR}}
         ./${{env.BUILD_KERNEL}} ${{github.event.inputs.CPUD}} gki
 
     - name: 制作 AnyKernel3
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf ./AnyKernel3/.git
-        cp ${{env.UPLOAD_IMAGE}} ./AnyKernel3/
+        cp ${{env.UP_IMG}} ./AnyKernel3/
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
-        name: AnyKernel3_${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: ${{env.UPLOAD_ANYKERNEL3}}
+        name: AnyKernel3_${KSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
+        path: ${{env.UP_AK3}}
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
-        name: Image-${KERNELSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
-        path: ${{env.UPLOAD_IMAGE}}
+        name: Image-${KSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
+        path: ${{env.UP_IMG}}
