--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -112,13 +112,15 @@ jobs:
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf ./AnyKernel3/.git
         cp ${{env.UP_IMG}} ./AnyKernel3/
-        
+      continue-on-error: true 
+      
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
         name: AnyKernel3_${KSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
         path: ${{env.UP_AK3}}
-        
+      continue-on-error: true 
+      
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
