--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -24,20 +24,6 @@ on:
         required: true 
         default: '5.15'
         
-env:
-  GIT_USER_NAME: yuanqiongyoukong
-  GIT_USER_EMAIL: 413722718@qq.com
-  KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git
-  KERNELSU_URL: https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh
-  SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git
-  ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3
-  KSU_DIR: KernelSU
-  WORK_DIR: kernel_workspace
-  PLAT_DIR: kernel_platform
-  BUILD_KERNEL: kernel_platform/oplus/build/oplus_build_kernel.sh
-  UP_AK3: kernel_workspace/AnyKernel3
-  UP_IMG: kernel_workspace/out/dist/Image
-  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -52,11 +38,14 @@ jobs:
         remove-android: 'true'
         remove-haskell: 'true'
         remove-codeql: 'true'
+        remove-ruby: 'true'
+        remove-node: 'true'
+        remove-python: 'true'
         
     - name: 初始化编译环境
       run: |
-        git config --global user.name "${GIT_USER_NAME}"
-        git config --global user.email "${GIT_USER_EMAIL}"
+        git config --global user.name "yuanqiongyoukong"
+        git config --global user.email "413722718@qq.com"
         sudo apt update && sudo apt upgrade -y && sudo apt install -y python3 git curl
         curl -o ~/repo https://storage.googleapis.com/git-repo-downloads/repo
         chmod a+x ~/repo
@@ -64,59 +53,63 @@ jobs:
         
     - name: 拉取内核清单
       run: |
-        mkdir ${{env.WORK_DIR}} && cd ${{env.WORK_DIR}}
-        repo init -u ${{env.KERNEL_MANIFEST_URL}} -b refs/heads/oneplus/${{github.event.inputs.CPU}} -m ${{github.event.inputs.FEIL}}.xml --depth=1
+        mkdir kernel_workspace && cd kernel_workspace
+        repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b refs/heads/oneplus/${{ github.event.inputs.CPU }} -m ${{ github.event.inputs.FEIL }}.xml --depth=1
         repo sync -j$(nproc --all)
         rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
-        sed -i 's/ -dirty//g' ${{env.PLAT_DIR}}/common/scripts/setlocalversion ${{env.PLAT_DIR}}/msm-kernel/scripts/setlocalversion
-        sed -i '203a\export LTO=thin' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
-        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                 # 禁用图像打包
-        # sed -i 's/local default_value=none/local default_value=thin/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh              # 设置默认值为thin
-        # sed -i 's/local default_value=enable/local default_value=disable/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh         # 设置默认值为禁用
+        sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion kernel_platform/msm-kernel/scripts/setlocalversion
+        # sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
+        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' kernel_platform/oplus/build/oplus_setup.sh                 # 禁用图像打包
+        # sed -i 's/local default_value=none/local default_value=thin/Ig' kernel_platform/oplus/build/oplus_setup.sh              # 设置默认值为thin
+        # sed -i 's/local default_value=enable/local default_value=disable/Ig' kernel_platform/oplus/build/oplus_setup.sh         # 设置默认值为禁用
         
     - name: 设置 KernelSU
       run: |
-        cd ${{env.WORK_DIR}}/${{env.PLAT_DIR}}/common
-        curl -LSs ${{env.KERNELSU_URL}} | bash -s main
+        cd kernel_workspace/kernel_platform
+        curl -LSs https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh | bash -s main
+        cd KernelSU
+        KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
+        echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
+        sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
         
     - name: 添加 SUSFS
       run: |
-        cd ${{env.WORK_DIR}}
-        git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
-        cd ${{env.PLAT_DIR}}
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./common/${KSU_DIR}/
-        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch ./common/
+        cd kernel_workspace
+        git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}
+        cd kernel_platform
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
+        cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
         
         # 应用补丁
-        cd ./common/${KSU_DIR}
+        cd ./KernelSU
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
-        cd ..
+        cd ../common
         patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
 
     - name: 编译内核
       run: |
-        cd ${{env.WORK_DIR}}
-        ./${{env.BUILD_KERNEL}} ${{github.event.inputs.CPUD}} gki
+        cd kernel_workspace
+        LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{ github.event.inputs.CPUD }} gki
 
     - name: 制作 AnyKernel3
       run: |
-        git clone ${{env.ANYKERNEL3_REPO}} --depth=1
+        git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
         rm -rf ./AnyKernel3/.git ./AnyKernel3/LICENSE
-        cp out/dist/Image AnyKernel3/
+        cp kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/Image ./AnyKernel3/
       continue-on-error: true 
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
-        name: AnyKernel3-${{env.KSU_DIR}}_${{github.event.inputs.FEIL}}
-        path: ${{env.UP_AK3}}
+        name: AnyKernel3_KernelSU-Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
+        path: ./AnyKernel3/*
       continue-on-error: true 
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
-        name: Image-${{env.KSU_DIR}}_${{github.event.inputs.FEIL}}
-        path: ${{env.UP_IMG}}
+        name: Image_KernelSU-Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
+        path: kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/Image
       continue-on-error: true 
