--- a/.github/workflows/KernelSU-SFS-ACE3.yml
+++ b/.github/workflows/KernelSU-SFS-ACE3.yml
@@ -365,7 +365,7 @@ jobs:
           else
             echo "源文件与目标相同，跳过复制"
           fi
-          cp "$dir1"Image ./AnyKernel3/Image
+          cp "$dir1"Image ./AnyKernel3/
         else
           echo "未找到 Image 文件，构建可能失败"
           exit 1
